@@ -1,3 +1,7 @@
+Thu Mar 18 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* gtkgame.c: Panel bug fixed (removed warning)
+
 Mon Mar 16 11:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* gtkgame.c: Panel bug fixed (crash at startup)
